k8s/base/app-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
spec:
  replicas: 1
  selector:
    matchLabels: { app: catalog-service }
  template:
    metadata:
      labels: { app: catalog-service }
    spec:
      containers:
        - name: catalog
          image: streamflix/catalog-service
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8081, name: http }]
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests: { memory: 512Mi, cpu: 200m }
            limits: { memory: 1Gi, cpu: 1000m }
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector: { app: catalog-service }
  ports:
    - { port: 8081, targetPort: 8081, name: http }
